--- a/example.env
+++ b/example.env
@@ -3,5 +3,5 @@ UR_IP="146.137.240.38"
 WEI_DATA_DIR=~/.wei
 WORKCELL_FILENAME=test_workcell.yaml
 WORKCELLS_DIR=./tests/workcell_defs
-IMAGE=ghcr.io/ad-sdl/ur_module
+IMAGE=ghcr.io/ad-sdl/vention_rail_module
 REDIS_DIR=~/.wei/redis
