--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,7 @@ services:
       tags:
         - ${IMAGE}:latest
         - ${IMAGE}:dev
-    command: python -m ur_rest_node --port 3011 --ur_ip ${UR_IP}
+    command: python -m vention_rest_node --rail_ip ${RAIL_IP}
     env_file: .env
     volumes:
       - ./src:/home/app/vention_rail_module/src
