--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 # Note: all paths are relative to the docker compose file
-UR_IP="146.137.240.38"
+RAIL_IP="192.168.7.2"
 WEI_DATA_DIR=~/.wei
 WORKCELL_FILENAME=test_workcell.yaml
 WORKCELLS_DIR=./tests/workcell_defs
