--- a/tests/workcell_defs/test_workcell.yaml
+++ b/tests/workcell_defs/test_workcell.yaml
@@ -9,10 +9,10 @@ config:
 
 #List of all components accessible in this workcell
 modules:
-  - name: ur_module
-    model: Universal Robot UR5e
+  - name: vention_rail_module
+    model: Vention Rail
     interface: wei_rest_node
     config:
-      rest_node_address: "http://ur_module:3011"
+      rest_node_address: "http://vention_rail_module:3022"
     workcell_coordinates: [0, 0, 0, 0, 0, 0]
 locations: {}
