--- a/compose.yaml
+++ b/compose.yaml
@@ -9,10 +9,10 @@ services:
       tags:
         - ${IMAGE}:latest
         - ${IMAGE}:dev
-    command: python -m vention_rest_node --rail_ip ${RAIL_IP}
+    command: python -m rail_rest_node --rail_ip ${RAIL_IP}
     env_file: .env
     volumes:
       - ./src:/home/app/vention_rail_module/src
       - ./tests:/home/app/vention_rail_module/tests
     ports:
-      - 3011:3011
+      - 3022:3022
