--- a/compose.yaml
+++ b/compose.yaml
@@ -2,14 +2,14 @@ name: vention_rail_module
 services:
   vention_rail_module:
     container_name: vention_rail_module
-    image: ${IMAGE}
+    image: ghcr.io/ad-sdl/vention_rail_module
     build:
       context: .
       dockerfile: Dockerfile
       tags:
-        - ${IMAGE}:latest
-        - ${IMAGE}:dev
-    command: python -m rail_rest_node --rail_ip ${RAIL_IP}
+        - ghcr.io/ad-sdl/vention_rail_module:latest
+        - ghcr.io/ad-sdl/vention_rail_module:dev
+    command: python -m rail_rest_node
     env_file: .env
     volumes:
       - ./src:/home/app/vention_rail_module/src
